--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ ul li {
 h3 {
   color: #ffffff;
   font-weight: 400;
-  font-family: Avenir;
 }
 
 .custom-container {
@@ -38,16 +37,15 @@ h3 {
   left: 0;
   z-index: 1030;
 }
-.primary-button {
-  border: 1.5px solid #ffc378;
-  background-color: #786b53;
+.connected-button {
+  border: 1.5px solid #ffe1bc;
+  background-color: #ff8437;
   font-weight: 600;
   text-align: center !important;
 }
-.primary-button:hover {
-  background-color: #786b53f0;
+.connected-button:hover {
   color: white !important;
-  text-align: center !important;
+  background-color: transparent;
 }
 .section-heading {
   color: #ffffff !important;
@@ -78,13 +76,13 @@ h3 {
   background: transparent;
   text-align: center;
   text-transform: uppercase;
-  border: 2px solid #ffc378;
+  border: 2px solid #ff8337;
 }
 .explore-btn .input-group-text {
-  background: #ffc378b0;
-  border-top: 2px solid #ffc378;
-  border-right: 2px solid #ffc378;
-  border-bottom: 2px solid #ffc378;
+  background: #ff8337;
+  border-top: 2px solid #ff8337;
+  border-right: 2px solid #ff8337;
+  border-bottom: 2px solid #ff8337;
   border-left: none;
 }
 .is-disabled {
@@ -103,7 +101,7 @@ h3 {
   color: #ffffff;
 }
 nav .nav-link:hover {
-  color: #ffc378 !important;
+  color: #ff8437 !important;
 }
 .nav-item .nav-link {
   margin-right: 30px;
@@ -135,20 +133,34 @@ nav .nav-link:hover {
 
 /* hero section starts here */
 .hero-section {
-  padding-top: 15%;
-  padding-bottom: 23%;
+  padding-top: 8%;
+  padding-bottom: 10%;
   background-image: url("../img/home/hero/alien-hero.svg");
   background-repeat: no-repeat;
   height: auto;
-  background-position: 30%;
-  background-size: 122%;
+  background-position: 27% 0%;
+  background-size: 120%;
 }
 .hero-img {
   width: 90%;
 }
 .right-arrow {
-  background: #ba9263;
+  background: #ff8337;
 }
+.hero-section .minting-block{
+  background-image: url(../img/home/hero/minting-bg.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 10px;
+  width: 232px;
+  padding: 10px;
+  margin-left: 88px;
+}
+ .minting-block p{
+   color: #67EAF9;
+   font-size: 14px;
+   text-align: center;
+ }
 /* hero section ends here */
 
 /* feature section starts here */
@@ -184,6 +196,7 @@ nav .nav-link:hover {
   color: #ffc378;
   background: #18378f;
   padding: 5px 20px;
+  font-size: 13px;
 }
 .block-content-list {
   padding-inline-start: 13px;
@@ -199,6 +212,26 @@ nav .nav-link:hover {
   display: inline-block;
   width: 1em;
   margin-left: -1em;
+}
+.light-img{
+  position: absolute;
+  top: -130px;
+  right: -5px;
+  z-index: -100000;
+  width: 58%;
+  mix-blend-mode: lighten;
+}
+.female-img{
+  mix-blend-mode: screen;
+}
+.cutoff-shade{
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgb(0 0 0 / 39%) 36%, #0d1748 79%);
+  height: 45%;
+  position: absolute;
+  bottom: -41%;
+  right: 0;
+  left: 0;
 }
 /* feature section ends here */
 
@@ -292,6 +325,7 @@ nav .nav-link:hover {
   right: -17px;
   width: 24%;
   bottom: -2%;
+  mix-blend-mode: luminosity;
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
@@ -313,18 +347,33 @@ nav .nav-link:hover {
   width: 77%;
   margin: 0 auto;
   padding: 0px 30px;
+  border: 1px solid #2B7FBA;
+}
+.selling-steps-section .minting-block{
+  background-image: url("../img/home/selling/minting-bg.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 10px;
+  width: 250px;
+  padding: 10px;
 }
 .step-card {
-  padding: 57px 5px;
+  padding: 57px 21px;
 }
 .step-card-2 {
   padding: 57px 20px;
 }
 .step-card p {
-  color: #b7babd;
+  color: #5BEBF3;
 }
 .step-card-2 p {
-  color: #b7babd;
+  color: #5BEBF3;
+}
+.card-border-right{
+  border-right: 1px solid #5bebf357;
+}
+.card-border-left{
+  border-left: 1px solid #5bebf357;
 }
 .selling-stone {
   position: absolute;
@@ -332,6 +381,11 @@ nav .nav-link:hover {
   height: 61%;
   top: 22%;
   z-index: -1000;
+}
+.globe-stars{
+  position: absolute;
+  top: -262px;
+  left: 0px;
 }
 /* selling steps section ends here */
 
@@ -344,6 +398,7 @@ nav .nav-link:hover {
   margin: 0 auto;
   padding: 9% 5% 8% 6%;
   position: relative;
+  font-weight: 600;
 }
 .join-community-block::before {
   content: "";
@@ -352,25 +407,33 @@ nav .nav-link:hover {
   bottom: 0;
   right: 0;
   left: 0;
-  background: #e97cb885;
+  background: #EC9B27;
+  opacity: 0.2;
+}
+.join-community-block h3{
+  font-weight: 700 !important;
+  letter-spacing: 1.5px;
+  font-size: 30px;
+
 }
 .join-community-block p {
   color: white;
-  font-size: 16px;
+  font-size: 14px;
 }
 .join-community-block .explore-btn-inner {
-  border: 2px solid #ff8437;
-  background: #ff8437;
+  border: 2px solid #ffffff;
+  background: #ffcf00;
+  color: black !important;
 }
 .join-community-block .explore-btn .input-group-text {
-  border-top: 2px solid #ffc378b0;
-  border-right: 2px solid #ffc378b0;
-  border-bottom: 2px solid #ffc378b0;
+  border-top: 2px solid #ffff;
+  border-right: 2px solid #ffff;
+  border-bottom: 2px solid #ffff;
   border-left: none;
-  background: #ffc378b0;
+  background: #ff8437;
 }
 .join-community-block .right-arrow {
-  background: #ffc378b0;
+  background: #ff8437;
 }
 /* join community section ends here */
 
@@ -403,7 +466,7 @@ nav .nav-link:hover {
   border-top: 1px solid rgb(255 255 255 / 10%) !important;
 }
 .footer-txt {
-  color: #a1a3c3;
+  color: white;
 }
 .footer-links li a:hover {
   color: #ffc378 !important;
@@ -469,6 +532,9 @@ nav .nav-link:hover {
   color: black !important;
 }
 .web3modal-provider-wrapper:nth-child(3) {
+  display: none !important;
+}
+.web3modal-provider-wrapper:nth-child(2) {
   display: none !important;
 }
 /* Network error */
@@ -543,11 +609,20 @@ nav .nav-link:hover {
     margin-top: 0px;
   }
   .hero-section {
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 2%;
+    padding-bottom: 6%;
   }
   .nav-item .nav-link {
     float: right;
+  }
+  .masked-alien{
+    width: 70%;
+  }
+  .globe-stars{
+    display: none;
+  }
+  .cutoff-shade{
+    height: 44%;
   }
 }
 
@@ -557,14 +632,14 @@ nav .nav-link:hover {
     width: 85% !important;
   }
   .section-heading {
-    font-size: 33px;
+    font-size: 24px;
   }
   .section-subheading {
     font-size: 13px;
   }
   .hero-section {
-    padding-top: 32%;
-    padding-bottom: 12%;
+    padding-top: 20%;
+    padding-bottom: 7%;
   }
   .artwork-1 {
     margin-top: 20px !important;
@@ -669,6 +744,15 @@ nav .nav-link:hover {
     display: none;
   }
   .stone-left {
+    display: none;
+  }
+  .card-border-right{
+    border: none;
+  }
+  .card-border-left{
+    border: none;
+  }
+  .light-img{
     display: none;
   }
 }
